Adding new form create code

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -9,15 +9,18 @@
  */
 
 .browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
 
 // injector
 @import 'account/login/login.less';
 @import 'admin/admin.less';
+@import 'common/header.less';
+@import 'create/create.less';
+@import 'forms/forms.less';
 @import 'main/main.less';
 @import 'modal/modal.less';
 // endinjector
