--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
+<div class="navbar navbar-default navbar-static-top" ng-controller="NavbarController">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">green</a>
+      <a href="/" class="navbar-brand green-brand">green</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
@@ -15,6 +15,8 @@
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
+        <li ng-show="isAdmin()" ng-class="{active: isActive('/forms')}"><a href="/forms">Forms</a></li>
+        <li ng-show="isAdmin()" ng-class="{active: isActive('/create')}"><a href="/create">Create</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
@@ -27,3 +29,4 @@
     </div>
   </div>
 </div>
+<div class="top-strip"></div>
