Adding sections fields and options

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -20,7 +20,9 @@
 @import 'admin/admin.less';
 @import 'common/header.less';
 @import 'create/create.less';
+@import 'fields/fields.less';
 @import 'forms/forms.less';
 @import 'main/main.less';
+@import 'options/options.less';
 @import 'modal/modal.less';
 // endinjector
