Adding more details

--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -160,6 +160,10 @@
 }
 
 .multipleOptions {
+  overflow: hidden;
+  display: block;
+  margin-left: 10px;
+  margin-bottom: 15px;
   .fakeRadioCheckbox {
     float: left;
     margin-right: 5px;
