--- a/client/app/fields/templates/_radio.html
+++ b/client/app/fields/templates/_radio.html
@@ -6,8 +6,8 @@
       <input name="optionsRadio" type="radio" id="option1" class="fakeRadioCheckbox" >
       <input type="text" values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
       <div class="multipleOptionsActions">
-        <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field.sequence)"> + </a>
-        <a href="" class="js_delete_element btn btn-xs btn-danger" href='' ng-click="removeChoice(field.sequence, field.choices.indexOf(choice))"> x </a>
+        <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)"> + </a>
+        <a href="" class="js_delete_element btn btn-xs btn-danger" href='' ng-click="removeChoice(field, field.choices.indexOf(choice))"> x </a>
       </div>
     </div>
   </div>
