--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -8,10 +8,45 @@
   }
 }
 
+.g-c-section-heading {
+  margin: 20px 0 0 0;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: @darkgray-light;
+  font-weight: 18px;
+}
+
+.g-c-section-content {
+  margin-left: 20px;
+}
+
+.g-c-seciton-meta {
+  margin-bottom: 30px;
+  margin-top: 20px;
+
+  .inlineInput {
+    padding: 0;
+    border: 0;
+    box-shadow: none;
+    font-size: 23px;
+    font-weight: 200;
+    padding: 5px 10px;
+    border-bottom: solid 1px #ddd;
+    &:hover {
+      border-bottom: solid 1px @darkgray-light;
+    }
+    &:focus {
+      border-bottom: solid 1px @darkgray-light;
+    }
+  }
+}
+
 .g-c-section-list {
   list-style-type: none;
-  margin-top: 50px;
+  margin-top: 10px;
   position: relative;
+  margin-left: 0;
+  padding: 0;
 
   z-index: 2;
   li {
@@ -114,8 +149,15 @@
     height: 6px;
     width: 18px;
   }
+
   .formField {
-    padding: 10px 30px 10px 20px;
+    padding: 10px 30px 10px 10px;
+    font-size: 13px;
+    .control-label {
+      max-width: 140px;
+      color: #555;
+    }
+
   }
 
   .controls {
