Adding the Green logo

--- a/client/app/common/header.less
+++ b/client/app/common/header.less
@@ -8,6 +8,14 @@
   background-size: cover;
 }
 
+.login-logo {
+  text-align: center;
+  img {
+    height: 120px;
+    margin-bottom: 20px;
+  }
+}
+
 .login-container {
   max-width: 400px;
   background: #fff;
@@ -16,7 +24,7 @@
   margin-top: 100px;
   padding: 30px 30px 40px;
   border-top: 12px solid @mint-dark;
-  border-radius: 5px 5px 0 0;
+  border-radius: 5px;
   box-shadow: 0 0 10px #888;
   h3 {
     margin: 0;
