--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -155,9 +155,8 @@
     font-size: 13px;
     .control-label {
       max-width: 140px;
-      color: #555;
+      color: @mediumgray-dark;
     }
-
   }
 
   .controls {
@@ -259,7 +258,6 @@
   margin-top: 20px;
 }
 
-
 .formFieldActions {
   position: absolute;
   top: 10px;
@@ -268,6 +266,9 @@
     padding: 6px 8px;
     border-radius: 3px;
     background: #eee;
+    em {
+      color: #888;
+    }
     &:hover {
       background: #eee;
     }
