Adding the design

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -20,6 +20,7 @@
 @import 'admin/admin.less';
 @import 'common/header.less';
 @import 'common/icons.less';
+@import 'common/utils.less';
 @import 'create/create.less';
 @import 'fields/fields.less';
 @import 'forms/forms.less';
