--- a/client/app/common/header.less
+++ b/client/app/common/header.less
@@ -1,3 +1,11 @@
+.page-container {
+  background: #fff;
+  padding: 30px;
+  box-shadow: 0 0 5px #ddd;
+  border-radius: 5px;
+  margin-bottom: 50px;
+}
+
 .login-bg {
   position: fixed;
   top: 0;
