Removing all the templates

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -22,6 +22,7 @@
 @import 'common/icons.less';
 @import 'common/utils.less';
 @import 'create/create.less';
+@import 'fieldElement/fieldElement.less';
 @import 'fields/fields.less';
 @import 'forms/forms.less';
 @import 'main/main.less';
