Adding the choices

--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -142,7 +142,6 @@
   position: relative;
   input[type="text"] {
     min-height: 30px;
-    border: solid 1px #AAA;
   }
   .dashed {
     border: dashed 1px #DCDCDC;
@@ -242,6 +241,13 @@
     width: 300px;
     float: left;
   }
+
+  .pointsInput {
+    width: 80px;
+    float: left;
+    margin: 0 0px 0 20px;
+  }
+
   .multipleOptionsActions {
     float: left;
     margin-left: 20px;
