Adding required styles

--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -284,7 +284,14 @@
       max-width: 300px;
     }
   }
+  .inputLabel {
+    margin: 10px;
+    label {
+      font-weight: normal;
+    }
+  }
 }
+
 
 
 .formDetails {
