Fixing the formatting and adding some styles

--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -237,12 +237,13 @@
     margin-top: 11px;
     display: inline-block;
   }
-  input[type="text"] {
+
+  input[type="text"].form-control {
     width: 300px;
     float: left;
   }
 
-  .pointsInput {
+  input[type="number"].pointsInput {
     width: 80px;
     float: left;
     margin: 0 0px 0 20px;
