Adding the empty state

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -20,11 +20,13 @@
 @import 'admin/admin.less';
 @import 'common/header.less';
 @import 'common/icons.less';
+@import 'common/ladda.less';
 @import 'common/utils.less';
 @import 'create/create.less';
 @import 'fieldElement/fieldElement.less';
 @import 'fields/fields.less';
 @import 'forms/forms.less';
+@import 'formshow/formshow.less';
 @import 'main/main.less';
 @import 'options/options.less';
 @import 'prevElement/prevElement.less';
