--- a/client/app/app.less
+++ b/client/app/app.less
@@ -30,5 +30,6 @@
 @import 'main/main.less';
 @import 'options/options.less';
 @import 'prevElement/prevElement.less';
+@import 'footer/footer.less';
 @import 'modal/modal.less';
 // endinjector
