--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -231,6 +231,7 @@
   display: block;
   margin-left: 10px;
   margin-bottom: 15px;
+
   .fakeRadioCheckbox {
     float: left;
     margin-right: 5px;
@@ -238,12 +239,13 @@
     display: inline-block;
   }
 
-  input[type="text"].form-control {
+  .form-control {
     width: 300px;
     float: left;
   }
 
-  input[type="number"].pointsInput {
+
+  .pointsInput {
     width: 80px;
     float: left;
     margin: 0 0px 0 20px;
@@ -289,11 +291,11 @@
     margin: 10px;
     label {
       font-weight: normal;
+      margin-bottom: 8px;
+      margin-left: 5px;
     }
   }
 }
-
-
 
 .formDetails {
   padding: 0;
@@ -325,5 +327,16 @@
     &:hover {
       background: #eee;
     }
+  }
+}
+
+.last-save-text {
+  font-size: 11px;
+  text-align: right;
+  display: block;
+  margin-bottom: 5px;
+  margin-top: -15px;
+  strong {
+    display: block;
   }
 }
