Fixing the fucking tootlip

--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -330,6 +330,12 @@
   }
 }
 
+.stuck {
+  position: fixed;
+  top: 0;
+  background: #fff;
+}
+
 .last-save-text {
   font-size: 11px;
   text-align: right;
