--- a/client/app/app.less
+++ b/client/app/app.less
@@ -30,6 +30,7 @@
 @import 'main/main.less';
 @import 'options/options.less';
 @import 'prevElement/prevElement.less';
+@import 'sticky/sticky.less';
 @import 'footer/footer.less';
 @import 'modal/modal.less';
 // endinjector
