Adding the from save

--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -151,7 +151,9 @@
   }
   .control-label, label {
     font-weight: normal;
-    color: $mutedColor;
+    color: #888;
+    vertical-align: middle;
+    margin: 0;
   }
   .draghandle {
     background: url(data:image/png;charset=utf-8;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAGCAYAAADOic7aAAAAH0lEQVQY02M4cODAfyhmgGKy+AzUNIgqmKoGDa4wAgBEaBrozyRdGQAAAABJRU5ErkJggg==) no-repeat 0 0;
