--- a/client/app/prevElement/prevElement.less
+++ b/client/app/prevElement/prevElement.less
@@ -1,9 +1,19 @@
 .possible-points {
   display: block;
+  margin-bottom: 20px;
+  margin-top: 5px;
 }
 
 .prev-field-label {
   line-height: 1.7;
   font-size: 14px;
   cursor: pointer;
+}
+
+.bonus-label {
+  margin-right: 5px;
+  display: inline-block;
+  padding: 4px 10px;
+  font-size: 11px;
+  font-weight: 200;
 }
