Adding sweet alert

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -21,6 +21,7 @@
 @import 'common/header.less';
 @import 'common/icons.less';
 @import 'common/ladda.less';
+@import 'common/sweetalert.less';
 @import 'common/utils.less';
 @import 'create/create.less';
 @import 'fieldElement/fieldElement.less';
