Adding possible points for the section

--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -29,6 +29,15 @@
 
 }
 
+.section-points {
+  margin-top: 8px;
+  display: inline-block;
+  background: #f8f8f8;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-weight: normal;
+}
+
 .form-meta {
   margin: -30px -15px 30px;
   overflow: hidden;
