--- a/client/app/formshow/formshow.less
+++ b/client/app/formshow/formshow.less
@@ -1,4 +1,26 @@
+@wiz-bg: #E4E4E4;
+@wiz-line-bg: #CDCDCD;
+@wiz-bubble-bg: #AAB2BD;
+@wiz-bubble-text: #E6E9ED;
+@wiz-acitve-text: #434A54;
+
+
 .form-show {
+
+  .form-show-container {
+    position: relative;
+  }
+
+  .section-points {
+    position: absolute;
+    top: -39px;
+    border-radius: 0;
+    background: @wiz-bg;
+    color: #777;
+    right: 0px;
+    padding: 7px 14px;
+    border-radius: 0 0 5px 5px;
+  }
 
   .inputLabel {
     label {
@@ -41,16 +63,11 @@
   margin: 0 auto;
 }
 
-@wiz-bg: #E4E4E4;
-@wiz-line-bg: #CDCDCD;
-@wiz-bubble-bg: #AAB2BD;
-@wiz-bubble-text: #E6E9ED;
-@wiz-acitve-text: #434A54;
 
 .form-sections {
   background: @wiz-bg;
   overflow: hidden;
-  margin: -30px -15px 30px;
+  margin: -30px -15px 20px;
   padding: 22px;
   //border-bottom: solid 1px #eee;
   position: relative;
