--- a/client/app/formshow/formshow.less
+++ b/client/app/formshow/formshow.less
@@ -42,8 +42,9 @@
 
   .form-group {
     > label {
-      font-size: 16px;
+      font-size: 18px;
       margin-bottom: 5px;
+      font-weight: 500;
     }
     margin-bottom: 30px;
   }
