--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -161,7 +161,7 @@
   .control-label, label {
     font-weight: normal;
     color: #888;
-    vertical-align: middle;
+    //vertical-align: middle;
     margin: 0;
   }
   .draghandle {
@@ -254,7 +254,6 @@
     width: 300px;
     float: left;
   }
-
 
   .pointsInput {
     width: 80px;
@@ -361,4 +360,8 @@
 .from-settings {
   padding: 10px 10px;
   margin-top: 20px;
+}
+
+.field-condition-flag {
+  margin-bottom: 20px;
 }
