Adding the badgetype directive

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -32,6 +32,7 @@
 @import 'main/main.less';
 @import 'options/options.less';
 @import 'prevElement/prevElement.less';
+@import 'typeBadge/typeBadge.less';
 @import 'footer/footer.less';
 @import 'modal/modal.less';
 // endinjector
