Fixing the bug while creating the section

--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -365,3 +365,11 @@
 .field-condition-flag {
   margin-bottom: 20px;
 }
+
+.addNewSection {
+  padding: 20px 0;
+  background: #f8f8f8;
+  margin-left: -30px;
+  padding-right: 10px;
+  padding-left: 20px;
+}
