--- a/client/app/app.less
+++ b/client/app/app.less
@@ -30,6 +30,7 @@
 @import 'forms/forms.less';
 @import 'formshow/formshow.less';
 @import 'main/main.less';
+@import 'na/na.less';
 @import 'options/options.less';
 @import 'prevElement/prevElement.less';
 @import 'typeBadge/typeBadge.less';
