--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -363,3 +363,12 @@
   padding-right: 10px;
   padding-left: 20px;
 }
+
+.form-header-meta {
+  margin: -30px -15px 30px;
+  overflow: hidden;
+  background: #f8f8f8;
+  padding: 30px 15px;
+  border-radius: 5px 5px 0 0;
+  border-bottom: solid 1px #eee;
+}
