Adding results page

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -33,6 +33,7 @@
 @import 'na/na.less';
 @import 'options/options.less';
 @import 'prevElement/prevElement.less';
+@import 'results/results.less';
 @import 'typeBadge/typeBadge.less';
 @import 'footer/footer.less';
 @import 'modal/modal.less';
