--- a/client/app/app.less
+++ b/client/app/app.less
@@ -1,6 +1,7 @@
 @import 'bootstrap/less/bootstrap.less';
 @import 'font-awesome/less/font-awesome.less';
 
+
 @icon-font-path: '/bower_components/bootstrap/fonts/';
 @fa-font-path: '/bower_components/font-awesome/fonts';
 
@@ -15,9 +16,11 @@
   padding: 0.2em 0;
 }
 
+@import 'angular-xeditable/dist/css/xeditable.less';
 // injector
 @import 'account/login/login.less';
 @import 'admin/admin.less';
+@import 'certificate/certificate.less';
 @import 'common/header.less';
 @import 'common/icons.less';
 @import 'common/ladda.less';
