--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -15,6 +15,7 @@
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li> -->
         <li ng-show="isAdmin()" ng-class="{active: isActive('/forms')}"><a href="/forms">Forms</a></li>
+        <li ng-show="isAdmin()" ng-class="{active: isActive('/certificates')}"><a href="/certificates">Certificates</a></li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
       </ul>
 
