--- a/client/app/forms/forms.less
+++ b/client/app/forms/forms.less
@@ -1,10 +1,10 @@
 .page-title {
   margin: 0;
-  font-size: 19px;
-  text-transform: uppercase;
+  font-size: 16px;
   margin-bottom: 10px;
-  font-weight: bold;
-  color: @mint-dark;
+  text-transform: uppercase;
+  font-weight: 800;
+  color: @darkgray-dark;
   border-bottom: solid 1px #eee;
   padding: 0 0 8px;
 }
@@ -36,4 +36,38 @@
     top: -36px;
     left: 110px;
   }
+}
+
+.avil-certificate {
+  padding: 10px 30px;
+  border-bottom: solid 1px #ddd;
+  background: #f7f7f7;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.item {
+  position: relative;
+  min-height: 100px;
+  .item-media {
+    position: absolute;
+    left: 20px;
+    right: 0;
+    width: 80px;
+    img {
+      height: 80px;
+      width: 80px;
+    }
+  }
+  .item-body {
+    padding-left: 85px;
+    h5 {
+      font-size: 16px;
+    }
+    .btn {
+      border-radius: 2px;
+    }
+  }
+
+
 }
