--- a/client/app/formshow/formshow.less
+++ b/client/app/formshow/formshow.less
@@ -290,7 +290,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: url(assets/images/certf-bottom.png) no-repeat;
+  background: url(../assets/images/certf-bottom.png) no-repeat;
   background-size: cover;
 }
 
