--- a/client/app/formshow/formshow.less
+++ b/client/app/formshow/formshow.less
@@ -303,3 +303,14 @@
   font-weight: 300;
 }
 
+.sucess-sharing-list {
+  margin: 30px auto;
+  padding: 0;
+  display: block;
+  list-style-type: none;
+  text-align: center;
+  li {
+    display: inline-block;
+    margin-right: 20px;
+  }
+}
