--- a/client/components/sidebar/sidebar.html
+++ b/client/components/sidebar/sidebar.html
@@ -1,11 +1,12 @@
 <style>
   .sidebar {
-    background: #fff;
+    background: #303E4C;
     min-width: 200px;
     margin-left: -15px;
     margin-right: -30px;
     box-shadow: 0 0 14px -4px #aaa;
     position: fixed;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.42);
     width: inherit;
     top: 0;
     bottom: 0;
@@ -22,20 +23,30 @@
   }
 
   .sb-nav li.active {
-    background: #f8f8f8;
+    background: #24303c;
     border-left: 3px solid #4A89DC;
+  }
+
+  .sb-nav li.active a {
+    color: #fff;
+  }
+
+  .sb-nav li.active a em {
+    color: #fff;
   }
 
   .sb-nav li a {
     display: block;
     padding: 12px 15px;
     text-decoration: none;
-    color: #43434a;
+    color: #ddd;
+    transition: all 0.2s linear;
   }
 
   .sb-nav li a:hover {
     text-decoration: none;
-    background: #eee;
+    background: #293643;
+    color: #fff;
   }
 
   .sb-nav li a em {
@@ -44,8 +55,18 @@
     margin-right: 6px;
     margin-left: 8px;
     font-size: 16px;
-    color: #888;
+    color: #ddd;
     width: 20px;
+    text-align: center;
+  }
+
+  .sidebar-logo {
+    text-align: center;
+    margin: 20px auto;
+  }
+
+  .sidebar-logo img {
+    width: 60px;
     text-align: center;
   }
 
@@ -53,13 +74,15 @@
 
 <div class="col-lg-2 col-sm-2 sidebar-wrap">
   <div class="sidebar">
-    <h2 class="text-center">Green</h2>
+      <div class="sidebar-logo">
+        <a href=""><img src="assets/images/green-logo.svg" alt=""></a>
+      </div>
     <br>
     <ul class="sb-nav">
-      <li class="active"> <a href=""><em class="icon icon-dashboard"></em> Dashboard</a></li>
-      <li> <a href=""><em class="icon  icon-trophy"></em> Certificates</a></li>
-      <li> <a href=""><em class="icon icon-chart"></em> Reports</a></li>
-      <li> <a href=""><em class="icon icon-users2"></em> Users</a></li>
+        <li ng-show="isAdmin()" ng-class="{active: isActive('/forms')}"><a href="/forms"><em class="icon icon-dashboard"></em> Dashboard</a></li>
+        <li ng-show="isAdmin()" ng-class="{active: isActive('/certificates')}"><a href="/certificates"> <em class="icon  icon-trophy"></em>  Certificates</a></li>
+        <li> <a href=""><em class="icon icon-chart"></em> Reports</a></li>
+        <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin"><em class="icon icon-users2"></em>  Admin</a></li>
     </ul>
 
   </div>
