Adding more details in the sidebar

--- a/client/app/forms/forms.less
+++ b/client/app/forms/forms.less
@@ -71,3 +71,73 @@
 
 
 }
+
+
+//
+
+  .iconed-input {
+    position: relative;
+    em {
+      position: absolute;
+      right: 10px;
+      top: 0;
+      line-height: 35px;
+      color: #aaa;
+    }
+  }
+
+  .main-content-wrap {
+    padding: 0;
+    background: #fff;
+  }
+
+  .main-content {
+    min-height: 900px;
+    background: #fff;
+    padding: 30px 20px;
+    border-right: solid 1px #dcdcdc;
+  }
+
+  .table-click tr {
+    cursor: pointer;
+  }
+  .main-content-slider {
+    padding: 20px 20px;
+    padding-top: 80px;
+    margin: 0;
+    background: #fafafa;
+    min-height: 900px;
+  }
+  .p0 {
+    margin: 0;
+    padding: 0;
+  }
+  .slider-title {
+    font-size: 25px;
+    font-weight: 300;
+    display: block;
+  }
+
+  .froms-list {
+    margin-top: 30px;
+  }
+  .tabled-row-heading {
+    padding: 10px 20px;
+    overflow: hidden;
+    text-transform: uppercase;
+    border-bottom: solid 2px #dcdcdc;
+    color: #888;
+    margin: 0 -20px;
+  }
+
+  .tabled-row {
+    margin: 0;
+    padding: 15px 20px;
+    overflow: hidden;
+    border-bottom: solid 1px #dcdcdc;
+    margin: 0 -20px;
+    &:hover {
+      background: #efefea;
+      cursor: pointer;
+    }
+  }
