--- a/client/app/app.less
+++ b/client/app/app.less
@@ -20,6 +20,7 @@
 @import 'account/login/login.less';
 @import 'admin/admin.less';
 @import 'certificate/certificate.less';
+@import 'common/animated.less';
 @import 'common/header.less';
 @import 'common/icons.less';
 @import 'common/ladda.less';
