Adding sidebar and the sidebar

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -28,6 +28,7 @@
 @import 'common/utils.less';
 @import 'conditionSettings/conditionSettings.less';
 @import 'create/create.less';
+@import 'create/sidebar.less';
 @import 'fieldElement/fieldElement.less';
 @import 'fields/fields.less';
 @import 'forms/forms.less';
