--- a/client/app/common/utils.less
+++ b/client/app/common/utils.less
@@ -12,3 +12,19 @@ select.form-control {
   line-height: normal;
   border-radius: 0;
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.08);
+}
+
+.vScroll {
+  overflow-x: auto;
+}
