--- a/client/app/forms/forms.less
+++ b/client/app/forms/forms.less
@@ -103,10 +103,15 @@
   }
   .main-content-slider {
     padding: 20px 20px;
-    padding-top: 80px;
+    padding-top: 40px;
     margin: 0;
     background: #fafafa;
-    min-height: 900px;
+    overflow: hidden;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    width: inherit;
   }
   .p0 {
     margin: 0;
