More new design

--- a/client/app/forms/forms.less
+++ b/client/app/forms/forms.less
@@ -126,6 +126,29 @@
   .froms-list {
     margin-top: 30px;
   }
+
+.tabled-row-filter {
+  padding: 20px;
+  border-top: solid 1px #f4f4f4;
+  border-bottom: solid 1px #f4f4f4;
+  margin: 0 -20px;
+  .label {
+    padding: 4px 15px;
+    margin-right: 15px;
+    background: #fff;
+    color: #797979;
+    border: solid 1px #dcdcdc;
+    font-size: 13px;
+    border-radius: 15px;
+    font-weight: normal;
+    &.selected {
+      color: #fff;
+      background: #3bafda;
+      border-color: #3bafda;
+    }
+  }
+}
+
   .tabled-row-heading {
     padding: 10px 20px;
     overflow: hidden;
