--- a/client/app/create/sidebar.less
+++ b/client/app/create/sidebar.less
@@ -1,6 +1,6 @@
 .sidebar {
   background: #303E4C;
-
+  min-width: 200px;
   margin-left: -15px;
   margin-right: -30px;
   box-shadow: 0 0 14px -4px #aaa;
@@ -8,7 +8,6 @@
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.42);
   width: inherit;
   top: 0;
-  position: fixed;
   bottom: 0;
 }
 
