Cute little animation

--- a/client/app/common/animated.less
+++ b/client/app/common/animated.less
@@ -23,6 +23,17 @@ Twitter: https://twitter.com/micr0bitz
           animation-fill-mode: both;
 }
 
+.animated05 {
+  -webkit-animation-duration: 0.5s;
+     -moz-animation-duration: 0.5s;
+       -o-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-fill-mode: both;
+     -moz-animation-fill-mode: both;
+       -o-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
 .animated.hinge {
   -webkit-animation-duration: 2s;
      -moz-animation-duration: 2s;
