Fixing the create form UI

--- a/client/components/sidebar/sidebar.html
+++ b/client/components/sidebar/sidebar.html
@@ -1,4 +1,4 @@
-<div class="col-lg-2 col-sm-2 sidebar-wrap">
+<div class="col-lg-2 col-sm-2 sidebar-wrap" ng-controller="NavbarController">
   <div class="sidebar">
       <div class="sidebar-logo">
         <a href=""><img src="assets/images/green-logo.svg" alt=""></a>
