--- a/client/app/create/create.less
+++ b/client/app/create/create.less
@@ -1,5 +1,7 @@
 .g-c-sidebar {
-  //border-right: solid 1px #ddd;
+  padding-top: 30px;
+  padding-right: 0;
+  padding-left: 25px;
 }
 
 .g-c-section-content {
@@ -9,7 +11,7 @@
 }
 
 .g-c-section-heading {
-  margin: 20px 0 0 0;
+  margin: 30px 0 0 0;
   text-transform: uppercase;
   font-weight: bold;
   color: @darkgray-light;
@@ -38,23 +40,21 @@
   font-weight: normal;
 }
 
-.page-container input.inlineInput {
-  padding: 0;
-  border: 0;
+.main-content-wrap input.inlineInput {
   box-shadow: none;
-  font-size: 23px;
-  font-weight: 200;
-  padding: 5px 10px;
-  border-bottom: solid 1px #ddd;
-  &:hover {
-    border-bottom: solid 1px @darkgray-light;
-  }
-  &:focus {
-    border-bottom: solid 1px @darkgray-light;
-  }
-  &.flag {
-    background: transparent;
-  }
+  font-size: 17px;
+  font-weight: 300;
+  padding: 7px 10px;
+  // border-bottom: solid 1px #ddd;
+  // &:hover {
+  //   border-bottom: solid 1px @darkgray-light;
+  // }
+  // &:focus {
+  //   border-bottom: solid 1px @darkgray-light;
+  // }
+  // &.flag {
+  //   background: transparent;
+  // }
 }
 
 .g-c-section-list {
@@ -104,9 +104,11 @@
 
 .g-c-content {
   border-left: solid 1px #ddd;
-  min-height: 600px;
-  margin-left: -16px;
+  min-height: 900px;
+  margin-left: -1px;
   z-index: 1;
+  padding-top: 20px;
+  padding-bottom: 100px;
 }
 
 .sortableList {
@@ -359,16 +361,16 @@
 .addNewSection {
   padding: 20px 0;
   background: #f8f8f8;
-  margin-left: -30px;
+  margin-top: 30px;
+  margin-left: -25px;
   padding-right: 10px;
   padding-left: 20px;
 }
 
 .form-header-meta {
-  margin: -30px -15px 30px;
   overflow: hidden;
   background: #f8f8f8;
   padding: 30px 15px;
-  border-radius: 5px 5px 0 0;
   border-bottom: solid 1px #eee;
+  overflow: hidden;
 }
