--- a/client/app/create/sidebar.less
+++ b/client/app/create/sidebar.less
@@ -21,6 +21,10 @@
   padding: 0;
 }
 
+.sb-nav li {
+  border-bottom: solid 1px #38444F;
+}
+
 .sb-nav li.active {
   background: #24303c;
   border-left: 3px solid #4A89DC;
