--- a/client/app/forms/forms.less
+++ b/client/app/forms/forms.less
@@ -143,6 +143,7 @@
     font-size: 13px;
     border-radius: 15px;
     font-weight: normal;
+    cursor: pointer;
     &.selected {
       color: #fff;
       background: #3bafda;
