--- a/client/app/create/sidebar.less
+++ b/client/app/create/sidebar.less
@@ -1,7 +1,6 @@
 .sidebar {
   background: #303E4C;
   min-width: 200px;
-  margin-left: -15px;
   margin-right: -30px;
   box-shadow: 0 0 14px -4px #aaa;
   position: fixed;
@@ -9,6 +8,7 @@
   width: inherit;
   top: 0;
   bottom: 0;
+  left: 0;
 }
 
 .sidebar-wrap {
@@ -23,6 +23,9 @@
 
 .sb-nav li {
   border-bottom: solid 1px #38444F;
+  &:first-child {
+    border-top: solid 1px #38444F;
+  }
 }
 
 .sb-nav li.active {
