--- a/client/app/forms/forms.less
+++ b/client/app/forms/forms.less
@@ -91,11 +91,12 @@
     background: #fff;
     transition: width 0.3s;
     transition-timing-function: cubic-bezier(0.1, 0.82, 0.25, 1);
+    border-top: 3px solid #ffac00;
   }
 
   .main-content {
     min-height: 900px;
-    background: #fff;
+    background: #fefefe;
     padding: 30px 20px;
     border-right: solid 1px #dcdcdc;
   }
@@ -132,8 +133,6 @@
 .tabled-row-filter {
   padding: 20px;
   border-top: solid 1px #f4f4f4;
-  border-bottom: solid 1px #f4f4f4;
-  margin: 0 -20px;
   .label {
     padding: 4px 15px;
     margin-right: 15px;
@@ -156,19 +155,20 @@
     padding: 10px 20px;
     overflow: hidden;
     text-transform: uppercase;
-    border-bottom: solid 2px #dcdcdc;
+    border-bottom: solid 2px #f3f3f3;
     color: #888;
     margin: 0 -20px;
+    border-top: solid 1px #f3f3f3;
   }
 
   .tabled-row {
     margin: 0;
     padding: 15px 20px;
     overflow: hidden;
-    border-bottom: solid 1px #dcdcdc;
+    border-bottom: solid 1px #f3f3f3;
     margin: 0 -20px;
     &:hover {
-      background: #efefea;
+      background: #fff6e3;
       cursor: pointer;
     }
   }
