--- a/client/app/app.less
+++ b/client/app/app.less
@@ -18,27 +18,27 @@
 
 // injector
 @import 'account/login/login.less';
-@import 'admin/admin.less';
-@import 'certificate/certificate.less';
 @import 'common/animated.less';
 @import 'common/header.less';
 @import 'common/icons.less';
 @import 'common/ladda.less';
 @import 'common/sweetalert.less';
 @import 'common/utils.less';
-@import 'conditionSettings/conditionSettings.less';
-@import 'create/create.less';
-@import 'create/sidebar.less';
-@import 'fieldElement/fieldElement.less';
-@import 'fields/fields.less';
-@import 'forms/forms.less';
-@import 'formshow/formshow.less';
-@import 'main/main.less';
-@import 'na/na.less';
+@import 'controllers/admin/admin.less';
+@import 'controllers/certificate/certificate.less';
+@import 'controllers/create/create.less';
+@import 'controllers/create/sidebar.less';
+@import 'controllers/fields/fields.less';
+@import 'controllers/forms/forms.less';
+@import 'controllers/formshow/formshow.less';
+@import 'controllers/main/main.less';
+@import 'controllers/results/results.less';
+@import 'directives/conditionSettings/conditionSettings.less';
+@import 'directives/fieldElement/fieldElement.less';
+@import 'directives/na/na.less';
+@import 'directives/prevElement/prevElement.less';
+@import 'directives/typeBadge/typeBadge.less';
 @import 'options/options.less';
-@import 'prevElement/prevElement.less';
-@import 'results/results.less';
-@import 'typeBadge/typeBadge.less';
 @import 'footer/footer.less';
 @import 'modal/modal.less';
 // endinjector
